--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Indecision App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <div id="app2"></div>
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    <script src="/scripts/app.js"></script>
 
+<head>
+  <meta charset="utf-8">
+  <title>Indecision App</title>
+</head>
 
-  </body>
+<body>
+  <div id="app"></div>
+  <div id="app2"></div>
+  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+  <script src="/scripts/app.js"></script>
+  <script></script>
+</body>
+
 </html>
