--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,7 @@
 
 <body>
   <div id="app"></div>
-  <div id="app2"></div>
-  <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-  <script src="/scripts/app.js"></script>
+  <script src="./bundle.js"></script>
   <script></script>
 </body>
 
